# winter2026_ece5532_examples

./: LICENSE  README.md
ament_package_example/: CMakeLists.txt  package.xml
ament_package_example/src/: service_advertiser.cpp  topic_publisher.cpp
basic_ros_example/: CMakeLists.txt  package.xml
basic_ros_example/scripts/: service_advertiser.py  service_client.py  topic_publisher.py
basic_ros_example/src/: service_advertiser.cpp  service_client.cpp  topic_publisher.cpp
cpp_example/: CMakeLists.txt  Factorial.cpp  Factorial.hpp  factorial_example.cpp  mult_example.cpp  package.xml
dead_reckoning_odom/: CMakeLists.txt  package.xml
dead_reckoning_odom/launch/: dead_reckoning_bag_test.launch.xml
dead_reckoning_odom/rviz/: bag_playback.rviz
dead_reckoning_odom/src/: dead_reckoning_node.cpp
diff_drive_example/: CMakeLists.txt  package.xml
diff_drive_example/scripts/: diff_drive_example.py
diff_drive_example/src/: diff_drive_example.cpp
gnss_ekf_example/: CMakeLists.txt  package.xml
gnss_ekf_example/launch/: gnss_ekf_example.launch.xml
gnss_ekf_example/rviz/: rviz_config.rviz
gnss_ekf_example/src/: enu.hpp  gnss_ekf_example.cpp
gps_example/: CMakeLists.txt  package.xml
gps_example/launch/: gps_example.launch.xml
gps_example/rviz/: gps_example.rviz
gps_example/scripts/: gps_example.py
gps_example/src/: enu_utm_comparison.cpp  gps_example.cpp
imu_ekf_example/: CMakeLists.txt  package.xml
imu_ekf_example/launch/: imu_ekf_example.launch.xml
imu_ekf_example/rviz/: rviz_config.rviz
imu_ekf_example/src/: imu_ekf_example.cpp
marker_example/: CMakeLists.txt  package.xml
marker_example/scripts/: marker_example_node.py  tf_broadcaster.py
marker_example/src/: marker_example.cpp  tf_broadcaster.cpp
maze_nav_example/: CMakeLists.txt  package.xml
maze_nav_example/config/: nav2_params.yaml  slam_toolbox_params.yaml  waypoints.yaml
maze_nav_example/launch/: maze_nav.launch.xml
maze_nav_example/rviz/: maze_nav_example.rviz
maze_nav_example/scripts/: drive_control.py  save_map.bash
maze_nav_example/worlds/: maze_world.sdf
opencv_example/: CMakeLists.txt  package.xml
opencv_example/config/: hough_transform_params.yaml
opencv_example/launch/: hough_transform_example.launch.xml
opencv_example/scripts/: hough_transform_node.py
opencv_example/src/: hough_transform_node.cpp
py_example/: CMakeLists.txt  package.xml
py_example/scripts/: factorial.py  mult_example.py
python_package_example/: package.xml  setup.cfg  setup.py
python_package_example/python_package_example/: service_advertiser.py  topic_publisher.py
real_slam_example/: CMakeLists.txt  package.xml
real_slam_example/config/: slam_toolbox_params.yaml
real_slam_example/launch/: build_map.launch.xml
real_slam_example/rviz/: build_map.rviz
real_slam_example/scripts/: save_map.bash
ros_namespace_example/: CMakeLists.txt  package.xml
ros_namespace_example/launch/: namespace_example.launch.py  namespace_example.launch.xml
ros_namespace_example/scripts/: namespace_example.py
ros_namespace_example/src/: namespace_example.cpp
ros_param_example/: CMakeLists.txt  package.xml
ros_param_example/config/: param_values.yaml
ros_param_example/launch/: param_example.launch.py  param_example.launch.xml  param_from_file.launch.py  param_from_file.launch.xml
ros_param_example/scripts/: param_example.py
ros_param_example/src/: param_example.cpp
ros_time_example/: CMakeLists.txt  package.xml
ros_time_example/scripts/: time_stamp_example.py  timer_example.py
ros_time_example/src/: time_stamp_example.cpp  timer_example.cpp
rosbag_example/: CMakeLists.txt  package.xml
rosbag_example/launch/: time_analysis.launch.xml
rosbag_example/src/: data_generator_node.cpp  time_analysis_node.cpp
sparkfun_imu_driver/: README.md  package.xml  setup.cfg  setup.py
sparkfun_imu_driver/sparkfun_imu_driver/: driver_node.py
sparkfun_imu_driver/udev/: 99-sparkfun-imu.rules
tf_frame_example/: CMakeLists.txt  package.xml
tf_frame_example/launch/: static_transform_publisher.launch.xml
tf_frame_example/rviz/: rviz_config.rviz
tf_frame_example/scripts/: tf_listen_example.py
tf_frame_example/src/: tf_listen_example.cpp
transform_examples/: CMakeLists.txt  package.xml
transform_examples/scripts/: example1_numpy.py  example1_transforms3d.py  example2_numpy.py
transform_examples/src/: example1_eigen.cpp  example1_tf.cpp  example2_eigen.cpp  example2_tf.cpp
