<?xml version="1.0"?>
<package format="3">
  <name>dead_reckoning_odom</name>
  <version>0.0.0</version>
  <description>
    Integrate speed and yaw rate into a dead reckoning localization estimate
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>image_view</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
