<?xml version="1.0"?>
<package format="3">
  <name>real_slam_example</name>
  <version>0.0.0</version>
  <description>
    Package to configure and launch the ROS 2 SLAM
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>