<?xml version="1.0"?>
<package format="3">
  <name>ros_param_example</name>
  <version>0.0.0</version>
  <description>
    Nodes to introduce concepts behind ROS parameters
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
