<?xml version="1.0"?>
<package format="3">
  <name>ros_time_example</name>
  <version>0.0.0</version>
  <description>
    Nodes to introduce ROS message time stamps and ROS timers.
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
