<?xml version="1.0"?>
<package format="3">
  <name>tf_frame_example</name>
  <version>0.0.0</version>
  <description>
    Examples of how to publish static and dynamic TF frames
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
